# IcebergCTI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTI_ROADMAP.md  Dockerfile  NOTICE  README.md  SECURITY.md  alembic.ini  biome.jsonc  docker-compose.yml  pyproject.toml  requirements.txt  vulture_whitelist.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
deploy/: Caddyfile
deploy/k8s/: README.md  configmap.beta.yaml  configmap.yaml  deployment.yaml  ingress.yaml  migrate-job.yaml  postgres.yaml  prune-cronjob.yaml  pvc.yaml  release.sh  secret.example.yaml  service.yaml
docs/: RELEASING.md
docs/plans/: 1b-estimative-language.md  1c-judgement-scaffolding.md  A-attack-navigator.md
docs/screenshots/: README.md  capture.py  seed_demo.py
frontend/: input.css  tailwind.config.js
scripts/: vendor_assets.py
src/iceberg/: __init__.py  attack_import.py  config.py  db.py  embeds.py  health.py  help_content.py  logging_config.py  main.py  maintenance.py  models.py  schemas.py  seed.py  templating.py
src/iceberg/api/: __init__.py  account.py  ai.py  attack.py  audience.py  feed.py  feedback.py  ingestion.py  notebooks.py  preview.py  relationships.py  reports.py  requirements.py  search.py  tags.py  taxii.py
src/iceberg/auth/: __init__.py  audit_middleware.py  body_limit.py  csrf.py  dependencies.py  rate_limit.py  request_actor.py  routes.py  security_headers.py  signing.py  tokens.py
src/iceberg/auth/oidc/: __init__.py  auth0.py  authentik.py  base.py  entra.py  okta.py
src/iceberg/data/: starter_tags.json
src/iceberg/migrations/: env.py  script.py.mako
src/iceberg/migrations/versions/: 0e700e26e87f_add_ioc_reportioc_reportmispevent_.py  11f71f3875b9_initial_schema.py  27b21ab9c6aa_feed_and_feed_item_tables.py  8a7c1b2d4e5f_source_reliability_grading.py  8db5b15e1537_entity_relationships.py  97f13b59967e_report_analytic_confidence.py  a1b2c3d4e5f6_webhook_settings_table.py  a1f0c2d3e4b5_drop_entity_relationships.py  a4b5c6d7e8f9_attack_tactics.py  a5b6c7d8e9f0_misp_push_reservation.py  a6b7c8d9e0f1_tag_version_timestamps.py  b1c2d3e4f5a6_ai_settings_table.py  b232d8f39c4b_add_ach_model.py  b2c5de1928db_add_audit_event_and_settings.py  b3d9a4e21c7f_tag_attribution_profile.py  b5c6d7e8f9a0_durable_outbox_jobs.py  b5d9c1e07f2a_source_ioc_tlp.py  bec17a603c91_add_product_feedback.py  c3d4e5f6a7b8_multi_provider_oidc.py  c5c560ff65be_tag_aliases.py  c8f0a1b2d3e4_quality_roadmap_foundation.py  c9f8a7e6d5c4_oidc_issuer_identity.py  d1a4f7e6c5b4_cleanup_relationtype_enum.py  d1e2f3a4b5c6_publication_snapshots.py  d38850006560_proxy_settings_table.py  d9a0b1c2e3f4_ingestion_source_operational_status.py  dfb25674e675_requirement_kinds.py  e2b3c4d5e6f7_webhook_format.py  e7c1d9f4a2b8_postgres_fts.py  f3e4d5c6b7a8_tag_merge_lineage.py  f6b4f974b72e_add_figure_table.py
src/iceberg/rendering/: __init__.py  markdown.py  svg.py  typst.py
src/iceberg/services/: __init__.py  ach.py  ai.py  ai_settings.py  attachments.py  attack.py  attack_import.py  audience.py  audit.py  audit_settings.py  diamond.py  dissemination.py  effective_config.py  email.py  feed.py  feedback.py  feeds.py  figures.py  inbound.py  ingestion.py  iocs.py  jobs.py  lifecycle.py  maturity.py  misp.py  misp_settings.py  notebooks.py  oidc_settings.py  product_html.py  proxy.py  proxy_settings.py  publication.py  related.py  relationships.py  reports.py  requirements.py  search.py  siem.py  singleton.py  source_grading.py  (+7 more)
src/iceberg/static/: assets.lock.json
src/iceberg/static/css/: iceberg.css
src/iceberg/static/js/: tags.js
src/iceberg/templates/: _attack_matrix.html  _glyph.html  _macros.html  ach_edit.html  admin_ai.html  admin_audience.html  admin_audit.html  admin_config.html  admin_feeds.html  admin_home.html  admin_misp.html  admin_oidc.html  admin_proxy.html  admin_relationships.html  admin_tags.html  admin_webhook.html  base.html  dashboard.html  diamond_edit.html  entities_list.html  entity_profile.html  feed.html  feeds_reader.html  help.html  ingestion.html  login.html  matrix.html  maturity.html  notebook_detail.html  notebooks_list.html  preferences.html  report_edit.html  report_view.html  reports_list.html  requirement_detail.html  requirements_mine.html  search.html  tasking_board.html
src/iceberg/typst/: product.typ
src/iceberg/web/: __init__.py  admin_ai.py  admin_audit.py  admin_config.py  admin_feeds.py  admin_home.py  admin_misp.py  admin_oidc.py  admin_proxy.py  admin_webhook.py  analytics.py  common.py  discovery.py  feed.py  feeds.py  ingestion.py  notebooks.py  reports.py  requirements.py  routes.py
tagging-handoff/: TAGGING_HANDOFF.md
tagging-handoff/src/iceberg/static/css/: iceberg.css
tagging-handoff/src/iceberg/static/js/: tags.js
tagging-handoff/src/iceberg/templates/: _macros.html  admin_tags.html  base.html  report_edit.html
tests/: conftest.py  test_ach.py  test_admin_home.py  test_ai_backends.py  test_ai_ioc_extract.py  test_ai_report_assist_tlp.py  test_ai_settings.py  test_api.py  test_attachments.py  test_attack.py  test_attack_embed.py  test_attack_import.py  test_audit.py  test_body_limit.py  test_config.py  test_dashboard_counts.py  test_db.py  test_diamond.py  test_dissemination.py  test_editor_ai_a11y.py  test_effective_config.py  test_feed_context.py  test_feed_delivery_reason.py  test_feedback.py  test_feeds.py  test_figures.py  test_frontend_assets.py  test_general_grivas_security.py  test_health.py  test_help.py  test_iocs.py  test_jobs.py  test_lifecycle.py  test_maturity.py  test_migration_oidc_backfill.py  test_migrations.py  test_misp.py  test_oidc_multiprovider.py  test_package_data.py  test_portal.py  (+19 more)
website/: README.md  zensical.toml
website/docs/: deployment.md  index.md  integrations.md  security.md  workflow.md
website/docs/stylesheets/: fonts.css  iceberg.css
