[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "iceberg"
version = "0.1.0"
description = "Cyber threat intelligence collection, authoring and dissemination platform"
requires-python = ">=3.14"
# Version floors are anchored at the tested baseline so a fresh install can't
# silently pull an ancient (potentially vulnerable) release. These are NOT a
# full supply-chain lock — generate a lockfile (uv lock / pip-compile) pinning
# transitive dependencies before any production deployment.
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn>=0.49",
    "sqlmodel>=0.0.38",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.32",
    "authlib>=1.7",
    "httpx2>=2.4.0",  # our HTTP client (source grading) + Starlette's TestClient
    # authlib's Starlette OAuth integration imports the legacy httpx unconditionally
    # but doesn't declare it; we use that path (auth/routes.py), so pin it ourselves.
    "httpx>=0.28.1",
    "pyjwt>=2.13",
    "pydantic-settings>=2.14.1",
    "itsdangerous>=2.2",
    "markdown-it-py>=4.2",
    "mdit-py-plugins>=0.6",
    "nh3>=0.3.5",
    "alembic>=1.18.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
    "bandit>=1.9.4",
    "vulture>=2.16",
    "pip-audit>=2.10.1",
    "pre-commit>=4.4.0",
]

[project.scripts]
iceberg-seed = "iceberg.seed:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
iceberg = ["data/*.json", "migrations/script.py.mako", "migrations/versions/*.py"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
# Default lint rule set (E/F) — kept deliberately minimal; `ruff check .` passes.
extend-exclude = [
    "vulture_whitelist.py",  # pseudo-Python (intentional "undefined" names for Vulture)
    "docs/screenshots",      # one-off demo/screenshot helpers, not shipped code
]

[tool.coverage.run]
source = ["iceberg"]
omit = ["*/migrations/*"]  # Alembic env + versioned scripts are framework boilerplate

[tool.coverage.report]
show_missing = true
fail_under = 82  # ~5pt margin below the measured ~87% (stays safe if CI skips the Typst test)

[tool.vulture]
# Default min_confidence (60) so genuine dead code still surfaces; framework
# false positives are cleared by ignore_decorators + the committed whitelist.
paths = ["src/iceberg", "vulture_whitelist.py"]
exclude = ["*/migrations/*"]
ignore_decorators = [
    "@router.*",
    "@app.*",
    "@event.*",
    "@asynccontextmanager",
    "@model_validator",
    "@property",
]
