[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "iceberg"
version = "0.1.0"
description = "Cyber threat intelligence collection, authoring and dissemination platform"
requires-python = ">=3.14"
# Version floors are anchored at the tested baseline so a fresh install can't
# silently pull an ancient (potentially vulnerable) release. The committed
# uv.lock pins the tested transitive graph for CI and repeatable installs.
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn>=0.49",
    "sqlmodel>=0.0.38",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.32",
    "authlib>=1.7.2",
    # Starlette's TestClient and authlib's Starlette OAuth integration both import
    # httpx (the latter unconditionally, without declaring it); we use both paths.
    "httpx>=0.28.1",
    "pyjwt>=2.13",
    "pydantic-settings>=2.14.2",
    "itsdangerous>=2.2",
    "markdown-it-py>=4.2",
    "mdit-py-plugins>=0.6.1",
    "nh3>=0.3.5",
    "alembic>=1.18.4",
    "feedparser>=6.0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.18",
    "bandit>=1.9.4",
    "vulture>=2.16",
    "pip-audit>=2.10.1",
    "pre-commit>=4.6.0",
    "djlint>=1.39.2",
]

[project.scripts]
iceberg-seed = "iceberg.seed:main"
iceberg-prune-renders = "iceberg.maintenance:prune_renders_main"
iceberg-rebuild-related = "iceberg.maintenance:rebuild_related_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
iceberg = ["data/*.json", "migrations/script.py.mako", "migrations/versions/*.py"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# Run in parallel by default (pytest-xdist) — the suite is per-test setup-bound
# (each test rebuilds the app: migrations + taxonomy seed + FTS rebuild), so it
# scales near-linearly across cores (~107s → ~40s on 8 cores). Tests are
# process-isolated and parallel-safe (in-memory DB per test, tmp_path for files,
# ASGI transport so no port binding). Pass `-n0` to disable for pdb/-s debugging.
addopts = "-n auto"

[tool.ruff]
target-version = "py314"
# Default lint rule set (E/F) — kept deliberately minimal; `ruff check .` passes.
extend-exclude = [
    "vulture_whitelist.py",  # pseudo-Python (intentional "undefined" names for Vulture)
    "docs/screenshots",      # one-off demo/screenshot helpers, not shipped code
]

[tool.coverage.run]
source = ["iceberg"]
omit = ["*/migrations/*"]  # Alembic env + versioned scripts are framework boilerplate

[tool.coverage.report]
show_missing = true
fail_under = 82  # ~5pt margin below the measured ~87% (stays safe if CI skips the Typst test)

[tool.vulture]
# Default min_confidence (60) so genuine dead code still surfaces; framework
# false positives are cleared by ignore_decorators + the committed whitelist.
paths = ["src/iceberg", "vulture_whitelist.py"]
exclude = ["*/migrations/*"]
ignore_decorators = [
    "@router.*",
    "@app.*",
    "@event.*",
    "@asynccontextmanager",
    "@model_validator",
    "@property",
]

[tool.djlint]
# Jinja-aware template lint (structure / nesting / duplicate-attribute / a11y).
# Lint-only — no reformat: the templates are hand-authored with embedded Alpine,
# which djLint's reformatter mangles. The ignored rules are deliberate house
# conventions, not defects:
#   H006  img width/height — figures are variable-sized data-URI images
#   H021  inline style= — used intentionally throughout the design system
#   H023  HTML entity refs (&mdash; / &times;) — intentional
#   H030/H031  meta description/keywords — internal app, not SEO-indexed
#   J004  literal /static href — the portal links assets by path, not url_for
#   J018  literal internal hrefs — the portal uses path literals, not url_for
#   T003  unnamed {% endblock %} — consistent house style
# H037 (duplicate attribute) is kept on; its one Alpine false positive is
# suppressed inline in admin_tags.html.
profile = "jinja"
ignore = "H006,H021,H023,H030,H031,J004,J018,T003"
