[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "iceberg"
version = "0.1.0"
description = "Cyber threat intelligence collection, authoring and dissemination platform"
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "IcebergAI and the Iceberg contributors" }]
keywords = ["cti", "threat-intelligence", "security", "misp", "stix", "attack"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
]

# Version floors are anchored at the tested baseline so a fresh install can't
# silently pull an ancient (potentially vulnerable) release. The committed
# uv.lock pins the tested transitive graph for CI and repeatable installs.
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn>=0.51.0",
    "sqlmodel>=0.0.39",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.32",
    "authlib>=1.7.2",
    # Authlib's Starlette OAuth integration still imports httpx without declaring
    # it. Starlette TestClient has moved to the maintained httpx2 package; keep
    # both explicit until Authlib completes that transition.
    "httpx>=0.28.1",
    "httpx2>=2.7.0",
    "pyjwt>=2.13",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.1",
    "itsdangerous>=2.2",
    "markdown-it-py>=4.2",
    "mdit-py-plugins>=0.6.1",
    "nh3>=0.3.6",
    "alembic>=1.18.5",
    "feedparser>=6.0.12",
]

[project.urls]
Homepage = "https://github.com/IcebergAI/IcebergCTI"
Repository = "https://github.com/IcebergAI/IcebergCTI"
Issues = "https://github.com/IcebergAI/IcebergCTI/issues"

[project.optional-dependencies]
# Production datastore driver (PostgreSQL). Optional so the default/dev install
# stays SQLite-only and zero-dependency; SQLAlchemy uses the psycopg v3 driver
# via a `postgresql+psycopg://` URL. See CLAUDE.md *Database & migrations*.
postgres = [
    "psycopg[binary]>=3.3.4",
]
# Governed AI assist backends (off by default). Optional so the default/dev
# install never pulls the SDK; the `claude` backend needs `anthropic`, and the
# `bedrock` backend additionally needs the SDK's AWS auth deps. See CLAUDE.md
# *Governed AI assist*.
anthropic = [
    "anthropic>=0.116.0",
]
bedrock = [
    "anthropic[bedrock]>=0.116.0",
]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.20",
    "bandit>=1.9.4",
    "vulture>=2.16",
    "pip-audit>=2.10.1",
    "pre-commit>=4.6.0",
    "djlint>=1.40.1",
    # 3.3.1's published wheel omits the bundled OASIS JSON schemas, making
    # schema validation silently unusable. Pin the last complete release until
    # its successor restores those assets.
    "stix2-validator==3.2.0",
]

[project.scripts]
iceberg-seed = "iceberg.seed:main"
iceberg-import-attack = "iceberg.attack_import:main"
iceberg-migrate = "iceberg.maintenance:migrate_main"
iceberg-prune-renders = "iceberg.maintenance:prune_renders_main"
iceberg-rebuild-related = "iceberg.maintenance:rebuild_related_main"
iceberg-worker = "iceberg.maintenance:worker_main"
iceberg-verify-files = "iceberg.maintenance:verify_files_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
iceberg = [
    "data/*.json",
    "migrations/script.py.mako",
    "migrations/versions/*.py",
    "static/assets.lock.json",
    "static/css/*.css",
    "static/css/vendor/*.css",
    "static/fonts/*.woff2",
    "static/js/*.js",
    "static/js/vendor/*.js",
    "templates/*.html",
    "typst/*.typ",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# Run in parallel by default (pytest-xdist) — the suite is per-test setup-bound
# (each test rebuilds the app: migrations + taxonomy seed + FTS rebuild), so it
# scales near-linearly across cores (~107s → ~40s on 8 cores). Tests are
# process-isolated and parallel-safe (in-memory DB per test, tmp_path for files,
# ASGI transport so no port binding). Pass `-n0` to disable for pdb/-s debugging.
addopts = "-n auto"

[tool.ruff]
target-version = "py314"
# Default lint rule set (E/F) — kept deliberately minimal; `ruff check .` passes.
extend-exclude = [
    "vulture_whitelist.py",  # pseudo-Python (intentional "undefined" names for Vulture)
    "docs/screenshots",      # one-off demo/screenshot helpers, not shipped code
]

[tool.coverage.run]
source = ["iceberg"]
omit = ["*/migrations/*"]  # Alembic env + versioned scripts are framework boilerplate

[tool.coverage.report]
show_missing = true
fail_under = 82  # ~5pt margin below the measured ~87% (stays safe if CI skips the Typst test)

[tool.vulture]
# Default min_confidence (60) so genuine dead code still surfaces; framework
# false positives are cleared by ignore_decorators + the committed whitelist.
paths = ["src/iceberg", "vulture_whitelist.py"]
exclude = ["*/migrations/*"]
ignore_decorators = [
    "@router.*",
    "@app.*",
    "@event.*",
    "@asynccontextmanager",
    "@model_validator",
    "@field_validator",
    "@property",
]

[tool.djlint]
# Jinja-aware template lint (structure / nesting / duplicate-attribute / a11y).
# Lint-only — no reformat: the templates are hand-authored with embedded Alpine,
# which djLint's reformatter mangles. The ignored rules are deliberate house
# conventions, not defects:
#   H006  img width/height — figures are variable-sized data-URI images
#   H021  inline style= — used intentionally throughout the design system
#   H023  HTML entity refs (&mdash; / &times;) — intentional
#   H030/H031  meta description/keywords — internal app, not SEO-indexed
#   J004  literal /static href — the portal links assets by path, not url_for
#   J018  literal internal hrefs — the portal uses path literals, not url_for
#   T003  unnamed {% endblock %} — consistent house style
# H037 (duplicate attribute) is kept on; its one Alpine false positive is
# suppressed inline in admin_tags.html.
profile = "jinja"
ignore = "H006,H021,H023,H030,H031,J004,J018,T003"
